--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-SFU Vantage
+<html>
+
+<head>
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>SFU Vantage</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<body>
+  <div class="header">
+    <!-- <img class="logo" src="images/vantage-logo.png"></img> -->
+    <div class="middle">
+      <div class="title">SFU Vantage</div>
+      <div class="about">SFU Vantage is a collective of researchers<br>in the <a href="https://www.cs.sfu.ca/">School of Computing Science</a> at <a href="https://www.sfu.ca">Simon Fraser University</a>.
+      </div>
+    </div>
+  </div>
+
+  <div class="main">
+    <div class="middle">
+      <a href="http://sheelaghcarpendale.ca/" class="lab a">
+        <img class="logo" src="images/sheelagh.png" alt="Sheelagh Carpendale">
+        <div class="content">
+          <!-- <div class="name">Innovations in Visualization Laboratory</div> -->
+          <div class="prof">Dr. Sheelagh Carpendale</div>
+          <!-- <div class="about"></div> -->
+        </div>
+      </a>
+    </div>
+</body>
+
+</html>
