--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="header">
-    <!-- <img class="logo" src="images/vantage-logo.png"></img> -->
+    <!-- <img class="logo" src="img/vantage-logo.png"></img> -->
     <div class="middle">
       <div class="title">SFU Vantage</div>
       <div class="about">SFU Vantage is a collective of researchers<br>in the <a href="https://www.cs.sfu.ca/">School of Computing Science</a> at <a href="https://www.sfu.ca">Simon Fraser University</a>.
@@ -18,12 +18,172 @@
 
   <div class="main">
     <div class="middle">
-      <a href="http://sheelaghcarpendale.ca/" class="lab a">
-        <img class="logo" src="images/sheelagh.png" alt="Sheelagh Carpendale">
+      <a href="https://www.cs.sfu.ca/~sheelagh/" class="lab">
+        <img class="photo" src="img/sheelagh.jpg" alt="Sheelagh Carpendale">
         <div class="content">
-          <!-- <div class="name">Innovations in Visualization Laboratory</div> -->
+          <!-- <div class="name">Interactive Experiences Lab (ixLab) Lab</div> -->
           <div class="prof">Dr. Sheelagh Carpendale</div>
-          <!-- <div class="about"></div> -->
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://hci.cs.sfu.ca/" class="lab">
+        <img class="photo" src="img/parmit.jpg" alt="Parmit Chilana">
+        <div class="content">
+          <!-- <div class="name">Interactive Experiences Lab (ixLab) Lab</div> -->
+          <div class="prof">Dr. Parmit Chilana</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.rosielab.ca/" class="lab">
+        <img class="photo" src="img/angelica.jpg" alt="Angelica Lim">
+        <div class="content">
+          <!-- <div class="name">Robots with Social Intelligence and Empathy (ROSIE) Lab</div> -->
+          <div class="prof">Dr. Angelica Lim</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~hangma/" class="lab">
+        <img class="photo" src="img/hang.jpg" alt="Hang Ma">
+        <div class="content">
+          <!-- <div class="name">Autonomous Intelligence and Robotics (AIRob) Lab</div> -->
+          <div class="prof">Dr. Hang Ma</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://sfumars.com/mo-chen/" class="lab">
+        <img class="photo" src="img/mo.jpg" alt="Mo Chen">
+        <div class="content">
+          <!-- <div class="name">Multi-Agent Robotic Systems (MARS) Lab</div> -->
+          <div class="prof">Dr. Mo Chen</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="http://angelxuanchang.github.io/" class="lab">
+        <img class="photo" src="img/angel.jpg" alt="Angel Chang">
+        <div class="content">
+          <!-- <div class="name">3D Language (3DLG) Lab</div> -->
+          <div class="prof">Dr. Angel X. Chang</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www2.cs.sfu.ca/~anoop/" class="lab">
+        <img class="photo" src="img/anoop.png" alt="Anoop Sarkar">
+        <div class="content">
+          <!-- <div class="name">Natural Language (NatLang) Lab</div> -->
+          <div class="prof">Dr. Anoop Sarkar</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://sites.google.com/view/libbrecht-lab/" class="lab">
+        <img class="photo" src="img/max.jpg" alt="Maxwell W Libbrecht">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Maxwell W Libbrecht</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~oschulte/" class="lab">
+        <img class="photo" src="img/oliver.jpg" alt="Oliver Schulte">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Oliver Schulte</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.sfu.ca/computing/people/faculty/eugenefiume.html" class="lab">
+        <img class="photo" src="img/eugene.jpg" alt="Eugene Fiume">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Eugene Fiume</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.medicalimageanalysis.com/ghassans-bio" class="lab">
+        <img class="photo" src="img/ghassan.jpg" alt="Ghassan Hamarneh">
+        <div class="content">
+          <!-- <div class="name">Medical Image Analysis Lab</div> -->
+          <div class="prof">Dr. Ghassan Hamarneh</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~mori/" class="lab">
+        <img class="photo" src="img/greg.jpg" alt="Greg Mori">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Greg Mori</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~kkyin/" class="lab">
+        <img class="photo" src="img/kangkang.jpg" alt="KangKang Yin">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. KangKang Yin</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.sfu.ca/computing/people/faculty/ke-li.html" class="lab">
+        <img class="photo" src="img/ke.jpg" alt="Ke Li">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Ke Li</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~msavva/" class="lab">
+        <img class="photo" src="img/manolis.jpg" alt="Manolis Savva">
+        <div class="content">
+          <!-- <div class="name">Human-centric Visual Computing (HCVC) Lab</div> -->
+          <div class="prof">Dr. Manolis Savva</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~pingtan/" class="lab">
+        <img class="photo" src="img/ping.jpg" alt="Ping Tan">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Ping Tan</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www2.cs.sfu.ca/~haoz/" class="lab">
+        <img class="photo" src="img/hao.jpg" alt="Hao (Richard) Zhang">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Hao (Richard) Zhang</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~yagiz/" class="lab">
+        <img class="photo" src="img/yagiz.jpg" alt="Yagiz Aksoy">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Yagiz Aksoy</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www2.cs.sfu.ca/~furukawa/" class="lab">
+        <img class="photo" src="img/yasu.jpg" alt="Yasutaka Furukawa">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Yasutaka Furukawa</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.cs.sfu.ca/~jnwang/" class="lab">
+        <img class="photo" src="img/jiannan.jpg" alt="Jiannan Wang">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Jiannan Wang</div>
+          <!-- <div class="about">Blurb</div> -->
+        </div>
+      </a>
+      <a href="https://www.sfu.ca/computing/people/faculty/martinester/people.html" class="lab">
+        <img class="photo" src="img/martin.jpg" alt="Martin Ester">
+        <div class="content">
+          <!-- <div class="name">Lab</div> -->
+          <div class="prof">Dr. Martin Ester</div>
+          <!-- <div class="about">Blurb</div> -->
         </div>
       </a>
     </div>
